corrected alignement of text in AncestryThumbnail

--- a/src/assets/styles/AncestryThumbnail.scss
+++ b/src/assets/styles/AncestryThumbnail.scss
@@ -61,6 +61,7 @@
 			font-family: $lora;
 			font-size: 0.9rem;
 			margin: 0.313rem 0 0.625rem;
+			text-align: left;
 
 			&:first-of-type {
 				margin: 0.5rem 0 1rem 0;
